# end2end-conv-accel-verify

./: .gitignore  CMakeLists.txt  Device-Under-Test-Stimulate  Device-Under-Test-Stimulate.cpp  README.md  requirements.txt
dut_cpp/include/: cnn_dut.h
dut_cpp/src/: cnn_dut.cpp
pybind_wrapper/: wrapper.cpp
python_testbench/: golden_model.py  run_test.py  visual_tester.py
